@startuml
skinparam classAttributeIconSize 0

class Organization {
    - id: long
    - name: String
    - coordinates: Coordinates
    - creationDate: ZonedDateTime
    - annualTurnover: float
    - type: OrganizationType
    - postalAddress: Address
    - {static} nextId: long
    + Organization(name, coords, turnover, type, address)
    + Organization(id, name, coords, date, turnover, type, address)
    + getId(): long
    + getName(): String
    + getCoordinates(): Coordinates
    + getCreationDate(): ZonedDateTime
    + getAnnualTurnover(): float
    + getType(): OrganizationType
    + getPostalAddress(): Address
    + compareTo(Organization): int
    + toString(): String
}

class Coordinates {
    - x: long
    - y: Long
    + Coordinates(long, Long)
    + getX(): long
    + getY(): Long
    + toString(): String
}

class Address {
    - zipCode: String
    - town: Location
    + Address(String, Location)
    + getZipCode(): String
    + getTown(): Location
    + toString(): String
}

class Location {
    - x: Integer
    - y: float
    - name: String
    + Location(Integer, float, String)
    + getX(): Integer
    + getY(): float
    + getName(): String
    + toString(): String
}

enum OrganizationType {
    COMMERCIAL
    TRUST
    PRIVATE_LIMITED_COMPANY
}

Organization --> Coordinates
Organization --> Address
Organization --> OrganizationType
Address --> Location
@enduml